--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿<!--------f-----------
+
+    Project 3
+    Name: Ethan Vandal
+    Date: 12/4/2024
+    Description: Please talk to me in person if you have any questions :)
+
+--------------------->
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
