fixed useless text atribute

--- a/contactMe.html
+++ b/contactMe.html
@@ -68,7 +68,7 @@
                         </li>
                         <li class="errorWrapper">
                             <label for="comments">Comments</label>
-                            <textarea id="comments" name="comments" type="text"> leave your comments here! </textarea>
+                            <textarea id="comments" name="comments"> leave your comments here! </textarea>
                         </li>
                     </ul>
                     <button type="submit" id="submit">Submit</button>
